<?xml version="1.0"?>
<resources>
    <string name="app_name">Advanced settings</string>
    <string name="prox_cal">Prox calibration</string>
    <string name="prox_naked_cal">Prox naked calibration</string>
    <string name="port_enabler">Enable diagnostic port</string>
    <string name="keys_order_title">Touchscreen keys order</string>
    <string name="reboot_needed">Please, reboot to apply changes.</string>
    <string name="fail">Unknown error.</string>
    <string name="fast_charge">Force fast charge</string>
    <string name="charge_level">Fast charge level, mA</string>
    <string name="palm2sleep_title">Palm2sleep</string>
    <string name="touchscreen_category">Touchscreen</string>
    <string name="charger_category">Charger</string>
    <string name="tuning_category">Tuning</string>
    <string name="zram_title">ZRam</string>
    <string name="cpugov">Cpu governor</string>
    <string name="cpugov_balanced">Balanced mode - %s</string>
    <string name="cpugov_powersave">Powersave mode - %s</string>
    <string name="cpu_boost">Cpu frequency boost</string>
    <string name="intelliplug_boost">Cpu cores boost</string>
    <string name="cpu_boost_summary"></string>
    <string name="intelliplug_boost_summary"></string>
    <string name="dt2w_title">Double tap to wake</string>

    <string name="dt2w_screen_title">Tap by screen action</string>
    <string name="dt2w_left_title">Tap by left button action</string>
    <string name="dt2w_middle_title">Tap by middle button action</string>
    <string name="dt2w_right_title">Tap by right button action</string>

    <string name="dt2w_policy_turn_on">Turn on phone</string>
    <string name="dt2w_policy_doze">Show notifications</string>
    <string name="dt2w_policy_camera">Open camera application</string>
    <string name="dt2w_policy_track_prev">Open previous music track</string>
    <string name="dt2w_policy_track_next">Open next music track</string>
    <string name="dt2w_policy_play_pause">Pause/play music</string>
    <string name="dt2w_policy_torch">Enable torch</string>
    <string name="dt2w_policy_none">Nothing to do</string>

    <!-- Gesture shortcuts -->
    <string name="ambient_display_title">Ambient display</string>

    <string name="screen_gestures_panel_title">Gestures</string>
    <string name="screen_gestures_panel_summary">Use gestures to perform actions</string>

    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>

    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    
    <!-- Implemented -->
    <string name="storages_category">Storages</string>
    <string name="main_storage_title">Main storage</string>
    
    <string name="btn_func_category">Extra button</string>
    <string name="btn_func_app">Short down action</string>
    <string name="btn_func_hint">nothing</string>
    <string name="btn_func_app2">Long down action</string>
    <string name="btn_func_hint2">nothing</string>
    
    <string name="cal_category">Calibration</string>
    <string name="btn_g_cal">G-sensor calibration</string>
    <string name="btn_g_cal_hint">Press to open calibration interface</string>
    <string name="btn_g_cal_failure">Unable to start G-sensor calibration activity</string>
    
    <string name="noise_category">Noise Cancellation</string>
    <string name="swt_spkr">In speaker mode</string>
    <string name="swt_call">In voice calls</string>
    <string name="swt_voice_rec">During voice recording</string>
    <string name="swt_audio_rec">During audio recording</string>

    <string name="storage_datamedia">Internal storage</string>
    <string name="storage_usbmsc">Internal SD</string>
    <string name="storage_sdcard">SD card</string>
</resources>
